Logo not showing, alternative domain not avilable - Fix

--- a/iitm_bs_dashboard_blue.user.css
+++ b/iitm_bs_dashboard_blue.user.css
@@ -9,7 +9,8 @@
 ==/UserStyle== */
 
 
-@-moz-document url-prefix("https://ds.study.iitm.ac.in/student_dashboard/") {
+@-moz-document url-prefix("https://ds.study.iitm.ac.in/student_dashboard/"),
+               url-prefix("https://app.onlinedegree.iitm.ac.in/student_dashboard/") {
     /*
      *SIDE BAR
      */
@@ -46,9 +47,7 @@
     .list-group > .list-group-item:hover .d-none {
         display: contents !important;
     }
-}
 
-@-moz-document url-prefix("https://ds.study.iitm.ac.in/student_dashboard/") {
     /*
      * NAV BAR
      */
@@ -83,9 +82,11 @@
     .navbar-brand > img {
         display: none;
     }
-}
 
-@-moz-document url-prefix("https://ds.study.iitm.ac.in/student_dashboard/") {
+    .navbar-brand::before {
+      content: url("https://github.com/5ovit/iitm_bs_dashboard_blue/raw/main/images/iitm_logo.svg");
+    }
+
     /*
      * FOOTER
      */
@@ -93,9 +94,7 @@
         background-color: #325E6988;
         color: white;
     }
-}
 
-@-moz-document url-prefix("https://ds.study.iitm.ac.in/student_dashboard/") {
     /*
      * BODY
      */
@@ -111,7 +110,8 @@
 }
 
 
-@-moz-document url("https://ds.study.iitm.ac.in/student_dashboard/current_courses") {
+@-moz-document url-prefix("https://ds.study.iitm.ac.in/student_dashboard/"),
+               url-prefix("https://app.onlinedegree.iitm.ac.in/student_dashboard/") {
     /*
      * My_Current_Courses
      */
