--- a/src/common.css
+++ b/src/common.css
@@ -1,4 +1,5 @@
-@-moz-document url-prefix("https://ds.study.iitm.ac.in/student_dashboard/") {
+@-moz-document url-prefix("https://ds.study.iitm.ac.in/student_dashboard/"),
+               url-prefix("https://app.onlinedegree.iitm.ac.in/student_dashboard/") {
     /*
      *SIDE BAR
      */
@@ -35,9 +36,7 @@
     .list-group > .list-group-item:hover .d-none {
         display: contents !important;
     }
-}
 
-@-moz-document url-prefix("https://ds.study.iitm.ac.in/student_dashboard/") {
     /*
      * NAV BAR
      */
@@ -72,9 +71,11 @@
     .navbar-brand > img {
         display: none;
     }
-}
 
-@-moz-document url-prefix("https://ds.study.iitm.ac.in/student_dashboard/") {
+    .navbar-brand::before {
+      content: url("https://github.com/5ovit/iitm_bs_dashboard_blue/raw/main/images/iitm_logo.svg");
+    }
+
     /*
      * FOOTER
      */
@@ -82,9 +83,7 @@
         background-color: #325E6988;
         color: white;
     }
-}
 
-@-moz-document url-prefix("https://ds.study.iitm.ac.in/student_dashboard/") {
     /*
      * BODY
      */
