--- a/src/my_current_courses.css
+++ b/src/my_current_courses.css
@@ -1,4 +1,5 @@
-@-moz-document url("https://ds.study.iitm.ac.in/student_dashboard/current_courses") {
+@-moz-document url-prefix("https://ds.study.iitm.ac.in/student_dashboard/"),
+               url-prefix("https://app.onlinedegree.iitm.ac.in/student_dashboard/") {
     /*
      * My_Current_Courses
      */
